--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <% flash.each do |message_type, message| %>
+        <div><%= message %></div>
+      <% end %>
+      
+      <%= yield %>  
+    </div>
   </body>
 </html>
