--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,21 +1,27 @@
-<%= form_for(task) do |t| %>
-  <% if task.errors.any? %>
-    <div id="error_explanation">
-    	<h2><%= pluralize(task.errors.count, "error") %> prohibited this task from being saved:</h2>
+<div class="row">
+	<div class="col-xs-12 col-sm-8 col-lg-6">
+    <%= form_for(task) do |t| %>
+      <% if task.errors.any? %>
+        <div class="alert alert-warning">
+        	<ul>
+        		<% task.errors.full_messages.each do |message| %>
+        		  <li><%= message %></li>
+        		<% end %>
+        	</ul>
+        </div>
+      <% end %>
+      
+    	<div class="form-froup">
+    	  <%= t.label :status, 'ステータス' %>
+    	  <%= t.text_field :status, class: 'form-control' %>
+    	</div>
     	
-    	<ul>
-    		<% task.errors.full_messages.each do |message| %>
-    		  <li><%= message %></li>
-    		<% end %>
-    	</ul>
-    </div>
-  <% end %>
-  
-	<%= t.label :status, 'ステータス' %>
-	<%= t.text_field :status %>
-	
-	<%= t.label :content, 'タスク' %>
-	<%= t.text_field :content %>
-	
-	<%= t.submit '登録' %>
-<% end %>
+    	<div class="form-froup">
+    	  <%= t.label :content, 'タスク' %>
+    	  <%= t.text_field :content, class: 'form-control' %>
+    	</div>
+    		
+    	<%= t.submit '登録', class: 'btn btn-primary' %>
+    <% end %>
+  </div>
+</div>
