--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,21 @@
 <h1>id:<%= @task.id %> のタスク詳細ページ</h1>
 
-<p>ステータス:<%= @task.status %></p>
-<p>タスク:<%= @task.content %></p>
+<table class="table table-bordered">
+	<thead>
+		<tr>
+			<th>id</th>
+			<th>タスク</th>
+			<th>ステータス</th>
+		</tr>
+	</thead>
+	<tbody>
+	  <tr>
+	  	<td><%= @task.id %> </td>
+	  	<td><%= @task.content %> </td>
+	  	<td><%= @task.status %> </td>
+	  </tr>
+	</tbody>
+</table>
 
-<%= link_to 'タスク一覧に戻る', tasks_path %>
-<%= link_to 'このタスクを編集する', edit_task_path(@task) %>
-<%= link_to 'このタスクを削除する', @task, method: :delete, data: {confirm: '本当に削除してよろしいですか？'} %>
+<%= link_to 'このタスクを編集する', edit_task_path(@task), class: 'btn btn-default' %>
+<%= link_to 'このタスクを削除する', @task, method: :delete, data: {confirm: '本当に削除してよろしいですか？'}, class: 'btn btn-danger' %>
