--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,5 +1,26 @@
 <% if logged_in? %>
-  <p>ログイン完了ユーザ: <%= current_user.name %></p>
+  <div class="row">
+    <aside class="col-md-4">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">新規タスク登録</h3>
+        </div>
+        <div class="panel-body">
+          <%= render 'tasks/form', task: @task %>
+        </div>
+      </div>
+    </aside>
+    <div class="col-xs-8">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">タスク一覧</h3>
+        </div>
+        <div class="panel-body">
+          <%= render 'tasks/tasks', tasks: @tasks %>
+        </div>
+      </div>
+    </div>
+  </div>
 <% else %>
   <div class="center jumbotron">
     <div class="text-center">
