--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,8 +10,13 @@
     </div>
   </aside>
   <div class="col-xs-8">
-    <ul class="nav nav-tabs nav-justified">
-      <li><a href="#">TaskList</a></li>
-    </ul>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <a href="#">タスク一覧</a>
+      </div>
+      <div class="panel-body">
+        <%= render 'tasks/tasks', tasks: @tasks %>
+      </div>
+    </div>
   </div>
 </div>
