--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -1,24 +1,30 @@
-<ul class="media-list">
-  <% tasks.each do |task| %>
-    <% user = task.user %>
-    <li class="media">
-      <div class="media-left">
-        <img class="media-object img-rounded" src="<%= gravatar_url(user, options = { size: 50 }) %>" alt="">
-      </div>
-      <div class="media-body">
-        <div>
-          <%= link_to user.name, user_path(user) %> <span class="text-muted">created at <%= task.created_at %></span>
-        </div>
-        <div>
-          <p><%= task.content %></p>
-        </div>
-        <div>
-        	<% if current_user == task.user %>
-        	  <%= link_to 'Delete', task, method: :delete, data: { confirm: 'You sure?' }, class: 'btn btn-danger btn-xs' %>
-          <% end %>
-        </div>
-      </div>
-    </li>
-  <% end %>
-  <%= paginate tasks %>
-</ul>
+<% if tasks.any? %>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>user</th>
+        <th>id</th>
+        <th>タスク</th>
+        <th>ステータス</th>
+      </tr>
+    </thead>
+    <% tasks.each do |task| %>
+      <% user = task.user %>
+      <tbody>
+        <tr>
+          <td>
+            <div><img class="media-object img-rounded" src="<%= gravatar_url(user, options = { size: 50 }) %>" alt=""></div>
+            <div><%= link_to user.name, user_path(user) %></div>
+          </td>
+          <td><%= link_to task.id, task_path(task) %></td>
+          <td><%= task.content %></td>
+          <td><%= task.status %></td>
+        </tr>
+     </tbody>
+    <% end %>
+  </table>
+  <div>
+    <%= paginate tasks %>
+  </div>
+<% end %>
+
