--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,11 @@
 <h1>id:<%= @task.id %> のタスク詳細ページ</h1>
 
+<% user = @task.user %>
+
 <table class="table table-bordered">
 	<thead>
 		<tr>
+			<th>user</th>
 			<th>id</th>
 			<th>タスク</th>
 			<th>ステータス</th>
@@ -10,12 +13,17 @@
 	</thead>
 	<tbody>
 	  <tr>
+	  	<td>
+        <div><img class="media-object img-rounded" src="<%= gravatar_url(user, options = { size: 50 }) %>" alt=""></div>
+        <div><%= link_to user.name, user_path(user) %></div>
+	  	</td>
 	  	<td><%= @task.id %> </td>
 	  	<td><%= @task.content %> </td>
 	  	<td><%= @task.status %> </td>
 	  </tr>
 	</tbody>
 </table>
-
-<%= link_to 'このタスクを編集する', edit_task_path(@task), class: 'btn btn-default' %>
-<%= link_to 'このタスクを削除する', @task, method: :delete, data: {confirm: '本当に削除してよろしいですか？'}, class: 'btn btn-danger' %>
+<% if current_user == user %>
+  <%= link_to 'このタスクを編集する', edit_task_path(@task), class: 'btn btn-default' %>
+  <%= link_to 'このタスクを削除する', @task, method: :delete, data: {confirm: '本当に削除してよろしいですか？'}, class: 'btn btn-danger' %>
+<% end %>
